# openAV-Luppp

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  PACKAGING  archive.sh  meson.build  meson_options.txt
src/: CMakeLists.txt  audiobuffer.cxx  audiobuffer.hxx  audioprocessor.hxx  buffers.hxx  config.hxx  controllerupdater.cxx  controllerupdater.hxx  debug.cxx  debug.hxx  denormals.hxx  diskreader.cxx  diskreader.hxx  diskwriter.cxx  diskwriter.hxx  event.cxx  event.hxx  eventhandler.hxx  eventhandlerdsp.cxx  eventhandlergui.cxx  gaudioeditor.cxx  gaudioeditor.hxx  gmastertrack.cxx  gmastertrack.hxx  goptions.cxx  goptions.hxx  gridlogic.cxx  gridlogic.hxx  gtrack.hxx  gui.cxx  gui.hxx  gunittrack.hxx  jack.cxx  jack.hxx  logic.cxx  logic.hxx  looper.cxx  looper.hxx  looperclip.cxx  looperclip.hxx  (+7 more)
src/avtk/: avtk_button.h  avtk_dial.h  avtk_light_button.h  clipselector.hxx  meson.build
src/cjson/: meson.build
src/controller/: binding.hxx  controller.hxx  genericmidi.cxx  genericmidi.hxx  guicontroller.cxx  guicontroller.hxx  meson.build  nonseq.cxx  nonseq.hxx
src/dsp/: dsp_dbmeter.hxx  dsp_reverb.hxx  dsp_sidechain_gain.hxx  meson.build
src/looper/: audiobuffer.cxx  audiobuffer.hxx  looper.cxx  looper.hxx  looperclip.cxx  looperclip.hxx  looperfactory.cxx  looperfactory.hxx  meson.build
src/observer/: meson.build  midi.cxx  midi.hxx  time.hxx
src/state/: meson.build  state.hxx  stately.hxx
src/tests/: diskreadertest.cxx  diskwritertest.cxx  gridlogictests.cxx  meson.build
src/unitTests/: meson.build  test_audiobuffer.cxx  (+2 more)
(+5 files in other folders)
